--- a/src/pages/main/style.css
+++ b/src/pages/main/style.css
@@ -14,44 +14,18 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container {
-  margin: 0;
-  padding-top: 10vh;
+#root {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  text-align: center;
+  position: relative;
+  width: 100%;
+  height: 95vh;
+}
+#input_conteneur {
+  position: relative;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-  display: flex;
-  justify-content: center;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
-h1 {
-  text-align: center;
-}
 
 input,
 button {
@@ -73,6 +47,7 @@ button {
 
 button:hover {
   border-color: #396cd8;
+  box-shadow: 0 2px 2px rgba(58, 58, 58, 0.58);
 }
 
 input,
@@ -80,8 +55,12 @@ button {
   outline: none;
 }
 
-#greet-input {
+#pseudo_input {
   margin-right: 5px;
+}
+#pseudo_input:hover {
+  border-color: #396cd8;
+  box-shadow: 0 2px 2px rgba(58, 58, 58, 0.58);
 }
 
 @media (prefers-color-scheme: dark) {
